# MatrixInverser

./: CMakeLists.txt  readme.md
include/: matrix.h
src/: main.cpp  matrix.cpp  matrix_tests
tests/: tests.cpp
